# openusage-windows

./: README.md  index.html  package.json
.github/workflows/: publish.yml
plugins/cursor/: plugin.js
plugins/mock/: plugin.js  plugin.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  panel.rs  tray.rs  window.rs
src/components/: provider-card.tsx
src/components/ui/: checkbox.tsx
src/hooks/: use-app-update.ts
src/lib/: analytics.ts  plugin-types.ts  settings.ts
src/pages/: settings.tsx
