[package]
name = "openusage"
version = "0.6.5"
description = "OpenUsage is an open source AI subscription limit tracker"
authors = ["Robin Ebers"]
edition = "2024"

[lib]
name = "openusage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["formatting"] }
dirs = "6"
log = "0.4"
reqwest = { version = "0.13", features = ["blocking"] }
rquickjs = { version = "0.11", features = ["bindgen"] }
tauri-plugin-store = "2.4.2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", rev = "e896cceb" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex-lite = "0.1.9"
